--- a/display.html
+++ b/display.html
@@ -1,49 +1,70 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Auto-Cycling Poster Display</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Conference Poster Gallery</title>
   <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      background: black;
-      overflow: hidden;
+    body {
+      font-family: sans-serif;
+      padding: 20px;
+      background-color: #f8f8f8;
     }
-    iframe {
-      width: 100vw;
-      height: 100vh;
+    h1 {
+      text-align: center;
+    }
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+      gap: 20px;
+      margin-top: 30px;
+    }
+    .poster {
+      background: white;
+      border: 1px solid #ccc;
+      padding: 10px;
+      border-radius: 10px;
+      box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+    .poster-title {
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+    .view-button {
+      padding: 8px 12px;
       border: none;
+      background-color: #007bff;
+      color: white;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .view-button:hover {
+      background-color: #0056b3;
     }
   </style>
 </head>
 <body>
+  <h1>e-Poster Gallery</h1>
+  <div class="gallery" id="gallery">
+    <!-- JS will populate poster tiles here -->
+  </div>
 
-<iframe id="posterFrame" src="" allowfullscreen></iframe>
-
-<script>
-  const frame = document.getElementById("posterFrame");
-  let posters = [];
-  let index = 0;
-
-  function showNextPoster() {
-    if (posters.length === 0) return;
-    frame.src = posters[index].pdf;
-    index = (index + 1) % posters.length;
-  }
-
-  fetch('posters.json')
-    .then(response => response.json())
-    .then(data => {
-      posters = data;
-      showNextPoster();
-      setInterval(showNextPoster, 30000); // switch every 30s
-    })
-    .catch(err => {
-      document.body.innerHTML = `<h1 style='color:white;text-align:center;margin-top:20%'>Failed to load posters.json</h1>`;
-      console.error("Failed to load posters.json", err);
-    });
-</script>
-
+  <script>
+    fetch('posters.json')
+      .then(response => response.json())
+      .then(data => {
+        const gallery = document.getElementById('gallery');
+        data.forEach(poster => {
+          const div = document.createElement('div');
+          div.className = 'poster';
+          div.innerHTML = `
+            <div class="poster-title">${poster.title}</div>
+            <button class="view-button" onclick="window.open('display.html?file=${encodeURIComponent(poster.pdf)}', '_blank')">Display on Venue Screen</button>
+          `;
+          gallery.appendChild(div);
+        });
+      });
+  </script>
 </body>
 </html>
