--- a/index2.html
+++ b/index2.html
@@ -63,14 +63,13 @@
 										<h3>e-Poster Sliding Presentations</h3>
 										<p>Gallery for viewing presentations on the screen</p>
 										<a href="gallery.html" class="button small">Launch Display</a>
-										
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3>View e-Posters</h3>
+										<h3>Links to Download e-Posters</h3>
 										<p>Archive for e-Posters from the conference</p>
 										<a href="archive.html" class="button small">View Posters</a>
-										
+										<div class="gallery" id="gallery-container"></div>
 									</li>
 									<li>
 										<span class="icon major style5 fa-gem"></span>
@@ -78,11 +77,6 @@
 										<p>Not yet decided.</p>
 									</li>
 								</ul>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
 							</section>
 
 					</div>
@@ -90,14 +84,14 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Conference Overview?</h2>
+							<h2>Contact Us ?</h2>
 							<p> Contact info for the LOC + Details as to where to share/upload the e-Posters.</p>
 							<ul class="actions">
 								<li><a href="https://sites.google.com/view/supernova100" class="button">Learn More</a></li>
 							</ul>
 						</section>
 						<section>
-							<h2>Contact Us </h2>
+							<h2>Etiam feugiat</h2>
 							<dl class="alt">
 								<dt>Address</dt>
 								<dd>Stockholm University, Albanova, SE106-91 Stockholm, Sweden</dd>
@@ -107,14 +101,11 @@
 								<dd><a href="#">information@untitled.tld</a></dd>
 							</dl>
 							<ul class="icons">
-								<!-- <li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li> -->
-								<!-- <li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li> -->
-								<!-- <li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li> -->
 								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 								<li><a href="https://sites.google.com/view/supernova100" class="icon brands fa-dribbble alt"><span class="label">Website</span></a></li>
 							</ul>
 						</section>
-      				  	<p class="copyright">&copy; Design Credits : <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
@@ -127,6 +118,57 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script>
+			  fetch('posters.json')
+			    .then(response => response.json())
+			    .then(data => {
+			      const gallery = document.getElementById('gallery-container');
+			      data.forEach(poster => {
+			        const div = document.createElement('div');
+			        div.className = 'poster';
+			        div.innerHTML = `
+			          <div class="poster-title">${poster.title}</div>
+			          <a class="view-button" href="${poster.pdf}" target="_blank">View</a>
+			          <a class="view-button" href="${poster.pdf}" download>Download</a>
+			        `;
+			        gallery.appendChild(div);
+			      });
+			    });
+			</script>
+
+			<style>
+			.gallery {
+			  display: grid;
+			  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+			  gap: 1.5rem;
+			  margin-top: 2rem;
+			}
+			.poster {
+			  background: #fff;
+			  padding: 1rem;
+			  border-radius: 12px;
+			  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+			  text-align: center;
+			}
+			.poster-title {
+			  font-weight: bold;
+			  margin-bottom: 1rem;
+			}
+			.view-button {
+			  background: #0069d9;
+			  color: white;
+			  padding: 0.5rem 1rem;
+			  margin: 0.25rem;
+			  border: none;
+			  border-radius: 6px;
+			  cursor: pointer;
+			  text-decoration: none;
+			  display: inline-block;
+			}
+			.view-button:hover {
+			  background: #004a9f;
+			}
+			</style>
 
 	</body>
 </html>
