--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 								<ul class="features">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
-										<h3>e-Poster Sliding Presentations</h3>
-										<p>Gallery for viewing presentations on the screen</p>
+										<h3>e-Poster Presentations</h3>
+										<p>Gallery for presentations on the screen</p>
 										<a href="gallery.html" class="button small">Launch Display</a>
 										
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3>View e-Posters</h3>
+										<h3>View/Download e-Posters</h3>
 										<p>Archive for e-Posters from the conference</p>
 										<a href="archive.html" class="button small">View Posters</a>
 										
@@ -78,11 +78,6 @@
 										<p>Not yet decided.</p>
 									</li>
 								</ul>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
 							</section>
 
 					</div>
