--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>SN100 e-Poster Gallery</h1>
-						<p>Webpage for hosting the e-Posters for SN100 Conference<br />
-						Adapted from Stellar theme for <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<h1>Supernova100 e-Poster Gallery</h1>
+						<p>e-Posters for SN100 Conference<br />
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">Introduction</a></li>
+							<li><a href="#intro" class="active">Overview</a></li>
 							<li><a href="#first">e-Poster Gallery</a></li>
 						</ul>
 					</nav>
@@ -41,11 +40,11 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Supernova 100 Introduction</h2>
+											<h2>One hundred years of supernova science</h2>
 										</header>
 										<p>Add descripton of the conference here + Details as to where to share/upload the e-Posters</p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Could swing it to the conference website</a></li>
+											<li><a href="https://sites.google.com/view/supernova100" class="button">Conference Website</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
@@ -72,11 +71,11 @@
 										<a href="archive.html" class="button small">View Posters</a>
 										
 									</li>
-									<li>
+									<!-- <li>
 										<span class="icon major style5 fa-gem"></span>
 										<h3>Misc?</h3>
 										<p>Not yet decided.</p>
-									</li>
+									</li> -->
 								</ul>
 							</section>
 
