--- a/gallery.html
+++ b/gallery.html
@@ -18,19 +18,26 @@
       font-family: system-ui, sans-serif;
     }
 
-    #fullscreenBtn {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      z-index: 1000;
-      padding: 10px 16px;
-      background: #007bff;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      font-size: 14px;
-      cursor: pointer;
-    }
+	#fullscreenBtn {
+	  position: absolute;
+	  top: 10px;
+	  right: 10px;
+	  z-index: 1000;
+	  padding: 8px 14px;
+	  background: transparent;
+	  color: white;
+	  font-size: 16px;
+	  font-weight: 500;
+	  border: 2px solid white;
+	  border-radius: 6px;
+	  cursor: pointer;
+	  transition: background 0.3s, color 0.3s;
+	}
+
+	#fullscreenBtn:hover {
+	  background: white;
+	  color: black;
+	}
 
     iframe {
       width: 100vw;
