--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>Supernova100 e-Poster Gallery</h1>
-						<p>e-Posters for SN100 Conference<br />
+						<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
+						<h1>Supernova100 Conference : e-Poster Gallery</h1>
+						<p>Gallery of e-Posters for one hundred years of supernova science, Stockholm, Sweden<br />
 					</header>
 
 				<!-- Nav -->
@@ -42,12 +42,12 @@
 										<header class="major">
 											<h2>One hundred years of supernova science</h2>
 										</header>
-										<p>Add descripton of the conference here + Details as to where to share/upload the e-Posters</p>
+										<p>In 1925, Knut Lundmark identified a class of exceptionally bright novae—later named "supernovae" by Baade and Zwicky—marking the beginning of supernova research. To commemorate 100 years of this discovery, we invite the global supernova community to a centennial conference in Stockholm, August 18–22, 2025. <span style="background-color: #ffe4b5; font-weight: bold;">Add the link to upload the posters</span></p>
 										<ul class="actions">
 											<li><a href="https://sites.google.com/view/supernova100" class="button">Conference Website</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span class="image"><img src="images/color.png" alt="" /></span>
 								</div>
 							</section>
 
@@ -59,16 +59,16 @@
 								<ul class="features">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
-										<h3>e-Poster Presentations</h3>
-										<p>Gallery for presentations on the screen</p>
+										<h3>Live e-Poster Gallery</h3>
+										<p>Gallery for displaying live e-Posters on the large screen at the Conference Venue</p>
 										<a href="gallery.html" class="button small">Launch Display</a>
 										
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>View/Download e-Posters</h3>
-										<p>Archive for e-Posters from the conference</p>
-										<a href="archive.html" class="button small">View Posters</a>
+										<p>Archive for viewing/downloading e-Posters presented at the conference</p>
+										<a href="archive.html" class="button small">e-Poster Archive</a>
 										
 									</li>
 									<!-- <li>
@@ -84,10 +84,10 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Conference Overview?</h2>
-							<p> Contact info for the LOC + Details as to where to share/upload the e-Posters.</p>
+							<h2>Conference Programme</h2>
+							<p> Check out the conference website for the layout of the talks/e-posters and the details of where to upload the e-Posters.</p>
 							<ul class="actions">
-								<li><a href="https://sites.google.com/view/supernova100" class="button">Learn More</a></li>
+								<li><a href="https://sites.google.com/view/supernova100/social-programme?authuser=0" class="button">Conference Programme</a></li>
 							</ul>
 						</section>
 						<section>
@@ -95,16 +95,14 @@
 							<dl class="alt">
 								<dt>Address</dt>
 								<dd>Stockholm University, Albanova, SE106-91 Stockholm, Sweden</dd>
-								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
 								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
+								<dd><a href="#">supernova100y@gmail.com</a></dd>
 							</dl>
 							<ul class="icons">
 								<!-- <li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li> -->
 								<!-- <li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li> -->
 								<!-- <li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li> -->
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+								<!-- <li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li> -->
 								<li><a href="https://sites.google.com/view/supernova100" class="icon brands fa-dribbble alt"><span class="label">Website</span></a></li>
 							</ul>
 						</section>
