Add minor changes to the webpage layout

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 										<header class="major">
 											<h2>One hundred years of supernova science</h2>
 										</header>
-										<p>In 1925, Knut Lundmark identified a class of exceptionally bright novae—later named "supernovae" by Baade and Zwicky—marking the beginning of supernova research. To commemorate 100 years of this discovery, we invite the global supernova community to a centennial conference in Stockholm, August 18–22, 2025. <span style="background-color: #ffe4b5; font-weight: bold;">Add the link to upload the posters</span></p>
+										<p>In 1925, Knut Lundmark identified a class of exceptionally bright novae—later named "supernovae" by Baade and Zwicky, marking the beginning of supernova research. To commemorate 100 years of this discovery, we invite the global supernova community to a centennial conference in Stockholm, August 18–22, 2025. <span style="background-color: #ffe4b5; font-weight: bold;">Add the link to upload the posters</span></p>
 										<ul class="actions">
 											<li><a href="https://sites.google.com/view/supernova100" class="button">Conference Website</a></li>
 										</ul>
@@ -60,7 +60,7 @@
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
 										<h3>Live e-Poster Gallery</h3>
-										<p>Gallery for displaying live e-Posters on the large screen at the Conference Venue</p>
+										<p>Gallery for displaying live e-Posters on a screen at the Conference Venue</p>
 										<a href="gallery.html" class="button small">Launch Display</a>
 										
 									</li>
