--- a/gallery.html
+++ b/gallery.html
@@ -28,22 +28,34 @@
 	  color: white;
 	  font-size: 14px;
 	  font-weight: 500;
-	  border: 2px solid white;
+	  border: 1px solid gray;
 	  border-radius: 6px;
 	  cursor: pointer;
 	  transition: background 0.3s, color 0.3s;
 	}
 
 	#fullscreenBtn:hover {
-	  background: white;
+	  background: gray;
 	  color: black;
 	}
 
-    iframe {
-      width: 100vw;
-      height: 100vh;
-      border: none;
-    }
+	iframe {
+	  width: 100%;
+	  height: 100vh;
+	  max-width: 100%;
+	  border: none;
+	  display: block;
+	}
+	
+	/* For Mobile */
+	@media (max-width: 600px) {
+	  #fullscreenBtn {
+	    font-size: 12px;
+	    padding: 5px 10px;
+	    top: 6px;
+	    right: 6px;
+	  }
+	}
   </style>
 </head>
 <body class="is-preload">
