Add minor changes to the gallery layout

--- a/gallery.html
+++ b/gallery.html
@@ -32,6 +32,10 @@
 	  border-radius: 6px;
 	  cursor: pointer;
 	  transition: background 0.3s, color 0.3s;
+	  line-height: 1;                /* Ensures vertical text alignment */
+	  display: inline-flex;          /* Enables alignment control */
+	  align-items: center;           /* Vertically centers text */
+	  justify-content: center;       /* Horizontally centers text (if needed) */
 	}
 
 	#fullscreenBtn:hover {
