--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>SN100 e-Poster Gallery</title>
+		<title>e-Poster Gallery: one hundred years of supernova science</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -61,14 +61,14 @@
 										<span class="icon solid major style1 fa-code"></span>
 										<h3>Live e-Poster Gallery</h3>
 										<p>Gallery for displaying live e-Posters on a screen at the Conference Venue</p>
-										<a href="gallery.html" class="button small">Launch Display</a>
+										<a href="gallery.html" class="button small"target="_blank">Launch Display</a>
 										
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>View/Download e-Posters</h3>
 										<p>Archive for viewing/downloading e-Posters presented at the conference</p>
-										<a href="archive.html" class="button small">e-Poster Archive</a>
+										<a href="archive.html" class="button small"target="_blank">e-Poster Archive</a>
 										
 									</li>
 									<!-- <li>
