Update the details in the information

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
-						<h1>Supernova 100 : e-Poster/Flash-Talk Gallery</h1>
+						<h1>Supernova 100 : e-Poster/Flash-talk Gallery</h1>
 						<p>Gallery of e-Posters for the conference "one hundred years of supernova science" to be held in Stockholm, Sweden from Aug 18-22, 2025<br />
 					</header>
 
@@ -42,11 +42,11 @@
 										<header class="major">
 											<h2>One hundred years of supernova science</h2>
 										</header>
-										<p>In 1925, Knut Lundmark identified a class of exceptionally bright novae—later named "supernovae" by Baade and Zwicky, marking the beginning of supernova research. To commemorate 100 years of this discovery, we invite the global supernova community to a centennial conference in Stockholm, August 18–22, 2025. 
+										<p>In 1925, Knut Lundmark identified a class of exceptionally bright novae—later named "supernovae" by Baade and Zwicky, marking the beginning of supernova research. To commemorate 100 years of this discovery, we invite the global supernova community to a centennial conference in Stockholm, August 18–22, 2025.</p> 
 											
-										All e-Poster/flash-talk presenters will be invited to give a 1–2 minute flash talk during a dedicated session (see the schedule at <span style="background-color: #ffe4b5; font-weight: bold;">[<a href=https://docs.google.com/spreadsheets/d/1go492KRz7u-OXUMnYme4elvLT3AOKul_mnxZ-TbUBek/edit?usp=sharing>Supernova 100 - Conference Schedule</a>]</span></p>). This short pitch should highlight the main idea of your poster and will be presented using a single static slide in PDF format (landscape, 16:9). Please avoid animations or videos. The goal is to briefly introduce your work and encourage attendees to visit your poster during the session. 
+										<p>All e-Poster/Flash-talk presenters will be invited to give a 1–2 minute flash talk during a dedicated session (see the schedule at the following <span style="background-color: #f5ead7; font-weight: bold;">[<a href=https://docs.google.com/spreadsheets/d/1go492KRz7u-OXUMnYme4elvLT3AOKul_mnxZ-TbUBek/edit?usp=sharing>Link</a>]</span>). This short pitch should highlight the main idea of your poster and will be presented using a single static slide in PDF format (landscape, 16:9). Please avoid animations or videos. The goal is to briefly introduce your work and encourage attendees to visit your poster during the session.</p> 
 										
-										We kindly ask you to upload your e-Poster/flash talk slide as a PDF (it will also be hosted online) by August 15? at the following link: <span style="background-color: #ffe4b5; font-weight: bold;">[<a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC?usp=sharing">Supernova 100 - Google Drive Poster Upload</a>]</span></p>. If you have any questions, feel free to contact us at supernova100y@gmail.com.
+										<p>We kindly ask you to upload your e-Poster/Flash-talk slide as a PDF (it will also be hosted online) by August 15? at the following <span style="background-color: #f5ead7; font-weight: bold;">[<a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC?usp=sharing">Google Drive Link</a>]</span>. If you have any questions, feel free to contact us at supernova100y@gmail.com.</p>
 
 											<!-- <span style="background-color: #ffe4b5; font-weight: bold;">Add the link to upload the posters</span></p> -->
 										<ul class="actions">
