--- a/index.html
+++ b/index.html
@@ -44,13 +44,10 @@
 										</header>
 										<p>In 1925, Knut Lundmark identified a class of exceptionally bright novae—later named "supernovae" by Baade and Zwicky, marking the beginning of supernova research. To commemorate 100 years of this discovery, we invite the global supernova community to a centennial conference in Stockholm, August 18–22, 2025.</p> 
 											
-										<p>All e-Poster/Flash-talk presenters are invited to give a <strong>flash talk</strong> during their allotted session (check the <u><span style="background-color: #e3d8ce; font-weight: bold;"><a href="https://docs.google.com/spreadsheets/d/1go492KRz7u-OXUMnYme4elvLT3AOKul_mnxZ-TbUBek/edit?usp=sharing">Conference Schedule</a></span></u>). This short pitch should highlight the main idea of your e-poster and should be presented using a single static slide in PDF format (landscape, 16:9). Please avoid animations or videos. The goal is to briefly introduce your work and encourage attendees to visit your poster during the session.</p> 
-										
-										<ul class="actions">
-											<li><a href="https://docs.google.com/spreadsheets/d/1go492KRz7u-OXUMnYme4elvLT3AOKul_mnxZ-TbUBek/edit?usp=sharing" class="button">Conference Schedule</a></li>
-										</ul>
+										<p>All e-Poster/Flash-talk presenters are invited to give a <strong>flash talk</strong> during their allotted session (check the <u><span style="background-color: #c3cdd2; font-weight: bold;"><a href="https://docs.google.com/spreadsheets/d/1go492KRz7u-OXUMnYme4elvLT3AOKul_mnxZ-TbUBek/edit?usp=sharing">Conference Schedule</a></span></u>). This short pitch should highlight the main idea of your e-poster and should be presented using a single static slide in PDF format (landscape, 16:9). Please avoid animations or videos. The goal is to briefly introduce your work and encourage attendees to visit your poster during the session.</p> 
 
-										<p>We kindly ask you to upload both your flash-talk slide and e-Poster (following the naming sequence : _authorname_ - _title_ - Poster/FlashTalk.pdf) </authorname>as PDF files by August 11, at the following link : <u><span style="background-color: #b3bec5; font-weight: bold;">[<a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC?usp=sharing">Google Drive : e-Posters Upload</a>]</span></u>. Posters will be hosted online and should ideally use a landscape 16:9 format for best on-screen viewing. . If you have any questions, feel free to contact us at supernova100y@gmail.com.</p>
+
+										<p>We kindly ask you to upload both your flash-talk slide and e-Poster (following the naming sequence : <u>John Doe - Supernova 100 - Poster/FlashTalk.pdf</u> as PDF files by August 11, at the following link : <u><span style="background-color: #e4d9d9; font-weight: bold;">[<a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC?usp=sharing">Google Drive : e-Posters Upload</a>]</span></u>. Posters will be hosted online and should ideally use a landscape 16:9 format for best on-screen viewing. . If you have any questions, feel free to contact us at supernova100y@gmail.com.</p>
 
 										<!-- Submitted posters will be made available online for other participants to view through the webpage <u><span style="background-color: #e3cfcc; font-weight: bold;">[<a href="https://singhavinash.net/SN100Posters/">Supernova 100 : e-Posters/Flash-talk Gallery</a>]</span></u> -->
 
@@ -73,7 +70,7 @@
 											<li>
 											  <a href="https://docs.google.com/spreadsheets/d/1go492KRz7u-OXUMnYme4elvLT3AOKul_mnxZ-TbUBek/edit?usp=sharing" 
 												 class="button" 
-												 style="background-color: #e3d8ce; font-weight: bold;">
+												 style="background-color: #c3cdd2; font-weight: bold;">
 												 Conference Schedule
 											  </a>
 											</li>
@@ -83,7 +80,7 @@
 											<li>
 											  <a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC?usp=sharing" 
 												 class="button" 
-												 style="background-color: #b3bec5; font-weight: bold;">
+												 style="background-color: #e4d9d9; font-weight: bold;">
 												 Google Drive: e-Poster / Flash-talk Upload
 											  </a>
 											</li>
