--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 											<li><a href="https://sites.google.com/view/supernova100" class="button">Conference Website</a></li>
 										</ul> -->
 
-										<ul class="actions">
+										<!-- <ul class="actions">
 											<li>
 											  <a href="https://sites.google.com/view/supernova100" 
 												 class="button" 
@@ -83,6 +83,32 @@
 												 style="background-color: #e4d9d9; font-weight: bold;">
 												 Google Drive: e-Poster / Flash-talk Upload
 											  </a>
+											</li>
+										</ul> -->
+
+										<h3>Useful Links</h3>
+
+										<ul class="actions" style="display: flex; flex-direction: column; gap: 0.5em; padding-left: 0; margin-top: 0.5em;">
+											<li style="margin: 0;">
+												<a href="https://sites.google.com/view/supernova100" 
+												class="button" 
+												style="background-color: #d0cdd2; font-weight: bold; padding: 0.5em 1em; display: inline-block;">
+												Conference Website
+												</a>
+											</li>
+											<li style="margin: 0;">
+												<a href="https://docs.google.com/spreadsheets/d/1go492KRz7u-OXUMnYme4elvLT3AOKul_mnxZ-TbUBek/edit?usp=sharing" 
+												class="button" 
+												style="background-color: #c3cdd2; font-weight: bold; padding: 0.5em 1em; display: inline-block;">
+												Conference Schedule
+												</a>
+											</li>
+											<li style="margin: 0;">
+												<a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC?usp=sharing" 
+												class="button" 
+												style="background-color: #e4d9d9; font-weight: bold; padding: 0.5em 1em; display: inline-block;">
+												Google Drive: e-Poster / Flash-talk Upload
+												</a>
 											</li>
 										</ul>
 
