Change the file naming sequence

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 											
 										<p>All e-Poster/Flash-talk presenters are invited to give a <strong>flash talk</strong> during their allotted session (check the <span style="background-color: #c3cdd2; font-weight: bold;"><a href="https://docs.google.com/spreadsheets/d/1go492KRz7u-OXUMnYme4elvLT3AOKul_mnxZ-TbUBek/edit?usp=sharing">Conference Schedule</a></span>). This short pitch should highlight the main idea of your e-poster and should be presented using a single static slide in PDF format (landscape, 16:9). Please avoid animations or videos. The goal is to briefly introduce your work and encourage attendees to visit your poster during the session.</p> 
 
-
-										<p>We kindly ask you to upload both your flash-talk slide and e-Poster (following the naming sequence : <u>John Doe - Supernova 100 - Poster/FlashTalk.pdf</u> as PDF files by August 11, at the following link : <span style="background-color: #e4d9d9; font-weight: bold;"><a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC?usp=sharing">Google Drive : e-Poster / Flash-talk Upload</a></span>. Posters will be hosted online and should ideally use a landscape 16:9 format for best on-screen viewing. If you have any questions, feel free to contact us at supernova100y@gmail.com.</p>
+										<p>We kindly ask you to upload both your flash-talk slide and e-Poster as PDF files by August 11, at the following link : <span style="background-color: #e4d9d9; font-weight: bold;"><a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC?usp=sharing">Supernova 100 - Poster Storage</a></span>. For the filenames, please use the format 'ePoster_Surname.pdf' and 'FlashSlide_Surname.pdf'. Posters will be hosted online and should ideally use a landscape 16:9 format for best on-screen viewing. If you have any questions, feel free to contact us at supernova100y@gmail.com.</p>
 
 										<!-- Submitted posters will be made available online for other participants to view through the webpage <u><span style="background-color: #e3cfcc; font-weight: bold;">[<a href="https://singhavinash.net/SN100Posters/">Supernova 100 : e-Posters/Flash-talk Gallery</a>]</span></u> -->
 
@@ -93,7 +92,7 @@
 												<a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC?usp=sharing" 
 												class="button" 
 												style="background-color: #e4d9d9; font-weight: bold; padding: 0.6em 1em 0.4em 1em; display: inline-block; line-height: 1.2;">
-												Google Drive: e-Poster / Flash-talk Upload
+												Supernova 100 - Poster Storage
 												</a>
 											</li>
 											</ul>
