Update the home page for the Website with the poster deadline and posters going live.

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 										<header class="major">
 											<h2>One hundred years of supernova science</h2>
 										</header>
-										<p>In 1925, Knut Lundmark identified a class of exceptionally bright novae—later named "supernovae" by Baade and Zwicky, marking the beginning of supernova research. To commemorate 100 years of this discovery, we invite the global supernova community to a centennial conference in Stockholm, August 18–22, 2025.</p> 
+										<!-- <p>In 1925, Knut Lundmark identified a class of exceptionally bright novae—later named "supernovae" by Baade and Zwicky, marking the beginning of supernova research. To commemorate 100 years of this discovery, we invite the global supernova community to a centennial conference in Stockholm, August 18–22, 2025.</p>  -->
 											
-										<p>All e-Poster/Flash-talk presenters are invited to give a <strong>flash talk</strong> during their allotted session (check the <span style="background-color: #c3cdd2; font-weight: bold;"><a href="https://docs.google.com/spreadsheets/d/1go492KRz7u-OXUMnYme4elvLT3AOKul_mnxZ-TbUBek/edit?usp=sharing">Conference Schedule</a></span>). This short pitch should highlight the main idea of your e-poster and should be presented using a single static slide in PDF format (landscape, 16:9). Please avoid animations or videos. The goal is to briefly introduce your work and encourage attendees to visit your poster during the session.</p> 
+										<p>All e-Poster presenters are invited to give a <strong>flash talk</strong> during their allotted session (check the <span style="background-color: #c3cdd2; font-weight: bold;"><a href="https://docs.google.com/spreadsheets/d/1go492KRz7u-OXUMnYme4elvLT3AOKul_mnxZ-TbUBek/edit?usp=sharing">Conference Schedule</a></span>). This short pitch should highlight the main idea of your e-poster and should be presented using a <strong>single static slide in PDF format (landscape, 16:9)</strong>. Please avoid animations or videos. The goal is to briefly introduce your work and encourage attendees to visit your poster online.</p> 
 
-										<p>We kindly ask you to upload both your flash-talk slide and e-Poster as PDF files by August 11, at the following link : <span style="background-color: #e4d9d9; font-weight: bold;"><a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC?usp=sharing">Supernova 100 - Poster Storage</a></span>. For the filenames, please use the format 'ePoster_Surname.pdf' and 'FlashSlide_Surname.pdf'. Posters will be hosted online and should ideally use a landscape 16:9 format for best on-screen viewing. If you have any questions, feel free to contact us at supernova100y@gmail.com.</p>
+										<p>We kindly ask you to upload both your flash-talk slide and e-Poster as PDF files by <strong>August 11</strong>, at the following link : <span style="background-color: #e4d9d9; font-weight: bold;"><a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC?usp=sharing">Supernova 100 - Poster Storage</a></span>. For the filenames, please use the format <strong>'ePoster_Surname.pdf'</strong> and <strong>'FlashSlide_Surname.pdf'</strong>. Posters will be hosted online and will <strong>go live on August 16 22:00 UTC</strong>. If you have any questions, feel free to contact us at supernova100y@gmail.com.</p>
 
 										<!-- Submitted posters will be made available online for other participants to view through the webpage <u><span style="background-color: #e3cfcc; font-weight: bold;">[<a href="https://singhavinash.net/SN100Posters/">Supernova 100 : e-Posters/Flash-talk Gallery</a>]</span></u> -->
 
@@ -144,7 +144,7 @@
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3>View/Download e-Posters</h3>
+										<h3>View/Download e-Poster/Flash-Talk</h3>
 										<p>Archive for viewing/downloading e-Posters presented at the conference</p>
 										<a href="archive.html" class="button small"target="_blank">e-Poster Archive</a>
 										
