Update changes to error prompt on the archive page.

--- a/archive.html
+++ b/archive.html
@@ -95,7 +95,7 @@
 
   function handleFlashTalk(slide) {
     if (!slide || slide === "null") {
-      alert("No Flash Talk exists for this slide.");
+      alert("No Flash Talk exists for this ePoster Presentation.");
     } else {
       window.open(slide, '_blank');
     }
