Minor tweaks to the page hosting the ePosters

--- a/archive.html
+++ b/archive.html
@@ -20,7 +20,7 @@
     <!-- Header -->
     <header id="header">
       <h1>SN100 e-Poster Archive</h1>
-      <p>View and download posters from the SN100 Conference</p>
+      <p>View/Download ePosters from the SN100 Conference</p>
     </header>
 
     <!-- Main -->
@@ -28,7 +28,7 @@
       <section class="main">
         <div class="inner">
           <header class="major">
-            <h2>Available Posters</h2>
+            <h2>Available ePosters</h2>
           </header>
           <ul id="posterList" class="alt"></ul>
         </div>
