--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3>View/Download e-Poster/Flash-Talk</h3>
+										<h3>View e-Poster/Flash-Talk</h3>
 										<p>Archive for viewing/downloading e-Posters presented at the conference</p>
 										<a href="archive.html" class="button small"target="_blank">e-Poster Archive</a>
 										
