Update the conference schedule as a PDF

--- a/index.html
+++ b/index.html
@@ -78,21 +78,22 @@
 												<a href="https://sites.google.com/view/supernova100" 
 												class="button" 
 												style="background-color: #d0cdd2; font-weight: bold; padding: 0.6em 1em 0.4em 1em; display: inline-block; line-height: 1.2;">
-												Conference Website
+												<u>Conference Website</u>
 												</a>
 											</li>
 											<li style="margin: 0; padding: 0;">
-												<a href="https://docs.google.com/spreadsheets/d/1go492KRz7u-OXUMnYme4elvLT3AOKul_mnxZ-TbUBek/edit?usp=sharing" 
-												class="button" 
-												style="background-color: #c3cdd2; font-weight: bold; padding: 0.6em 1em 0.4em 1em; display: inline-block; line-height: 1.2;">
-												Conference Schedule
+												<a href="schedule/100YSC_ConferenceSchedule.pdf" 
+												target="_blank" rel="noopener noreferrer"
+												class="button gray">
+												<!-- style="background-color: #c3cdd2; font-weight: bold; padding: 0.6em 1em 0.4em 1em; display: inline-block; line-height: 1.2;"> -->
+												<u>Conference Schedule</u>
 												</a>
 											</li>
 											<li style="margin: 0; padding: 0;">
 												<a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC?usp=sharing" 
 												class="button" 
 												style="background-color: #e4d9d9; font-weight: bold; padding: 0.6em 1em 0.4em 1em; display: inline-block; line-height: 1.2;">
-												Supernova 100 - Poster Storage
+												<u>Supernova 100 - Poster Storage</u>
 												</a>
 											</li>
 											</ul>
@@ -163,9 +164,9 @@
 					<footer id="footer">
 						<section>
 							<h2>Conference Programme</h2>
-							<p> Check out the conference website for the layout of the talks/e-posters and the details of where to upload the e-Posters.</p>
+							<p> Check out the PDF layout of the Talks and ePosters at the following link.</p>
 							<ul class="actions">
-								<li><a href="https://sites.google.com/view/supernova100/social-programme?authuser=0" class="button">Conference Programme</a></li>
+								<li><a href="https://sites.google.com/view/supernova100/social-programme?authuser=0" class="button">Conference Schedule</a></li>
 							</ul>
 						</section>
 						<section>
