--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 										</header>
 										<!-- <p>In 1925, Knut Lundmark identified a class of exceptionally bright novae—later named "supernovae" by Baade and Zwicky, marking the beginning of supernova research. To commemorate 100 years of this discovery, we invite the global supernova community to a centennial conference in Stockholm, August 18–22, 2025.</p>  -->
 											
-										<p>All e-Poster presenters are invited to give a <strong>flash talk</strong> during their allotted session (check the <span style="background-color: #c3cdd2; font-weight: bold;"><a href="https://docs.google.com/spreadsheets/d/1go492KRz7u-OXUMnYme4elvLT3AOKul_mnxZ-TbUBek/edit?usp=sharing">Conference Schedule</a></span>). This short pitch should highlight the main idea of your e-poster and should be presented using a <strong>single static slide in PDF format (landscape, 16:9)</strong>. Please avoid animations or videos. The goal is to briefly introduce your work and encourage attendees to visit your poster online.</p> 
+										<p>All e-Poster presenters are invited to give a <strong>flash talk</strong> during their allotted session. This short pitch should highlight the main idea of your e-poster and should be presented using a <strong>single static slide in PDF format (landscape, 16:9)</strong>. Please avoid animations or videos. The goal is to briefly introduce your work and encourage attendees to visit your poster online.</p> 
 
 										<p>We kindly ask you to upload both your flash-talk slide and e-Poster as PDF files by <strong>August 11</strong>, at the following link : <span style="background-color: #e4d9d9; font-weight: bold;"><a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC?usp=sharing">Supernova 100 - Poster Storage</a></span>. For the filenames, please use the format <strong>'ePoster_Title_Surname.pdf'</strong> and <strong>'FlashTalk_Title_Surname.pdf'</strong>. Posters will be hosted online and will <strong>go live on August 16 22:00 UTC</strong>. If you have any questions, feel free to contact us at supernova100y@gmail.com.</p>
 
@@ -78,7 +78,7 @@
 												<a href="https://sites.google.com/view/supernova100" 
 												class="button" 
 												style="background-color: #d0cdd2; font-weight: bold; padding: 0.6em 1em 0.4em 1em; display: inline-block; line-height: 1.2;">
-												<u>Conference Website</u>
+												Conference Website
 												</a>
 											</li>
 											<li style="margin: 0; padding: 0;">
@@ -86,14 +86,14 @@
 												target="_blank" rel="noopener noreferrer"
 												class="button gray">
 												<!-- style="background-color: #c3cdd2; font-weight: bold; padding: 0.6em 1em 0.4em 1em; display: inline-block; line-height: 1.2;"> -->
-												<u>Conference Schedule</u>
+												Conference Schedule
 												</a>
 											</li>
 											<li style="margin: 0; padding: 0;">
 												<a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC?usp=sharing" 
 												class="button" 
 												style="background-color: #e4d9d9; font-weight: bold; padding: 0.6em 1em 0.4em 1em; display: inline-block; line-height: 1.2;">
-												<u>Supernova 100 - Poster Storage</u>
+												Supernova 100 - Poster Storage
 												</a>
 											</li>
 											</ul>
