Minor stylin changes for the index page

--- a/index.html
+++ b/index.html
@@ -76,23 +76,23 @@
 											">
 											<li style="margin: 0; padding: 0;">
 												<a href="https://sites.google.com/view/supernova100" 
-												class="button orange" 
-												style="background-color: #d0cdd2; font-weight: bold; padding: 0.6em 1em 0.4em 1em; display: inline-block; line-height: 1.2;">
+												class="button orange">
+												<!-- style="background-color: #d0cdd2; font-weight: bold; padding: 0.6em 1em 0.4em 1em; display: inline-block; line-height: 1.2;"> -->
 												Conference Website
 												</a>
 											</li>
 											<li style="margin: 0; padding: 0;">
 												<a href="schedule/100YSC_ConferenceSchedule.pdf" 
 												target="_blank" rel="noopener noreferrer"
-												class="button red"
-												style="background-color: #c3cdd2; font-weight: bold;">
+												class="button red">
+												<!-- style="background-color: #c3cdd2; font-weight: bold; padding: 0.6em 1em 0.4em 1em;"> -->
 												Conference Schedule
 												</a>
 											</li>
 											<li style="margin: 0; padding: 0;">
 												<a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC?usp=sharing" 
-												class="button gray" 
-												style="background-color: #e4d9d9; font-weight: bold; padding: 0.6em 1em 0.4em 1em; display: inline-block; line-height: 1.2;">
+												class="button gray">
+												<!-- style="background-color: #e4d9d9; font-weight: bold; padding: 0.6em 1em 0.4em 1em; display: inline-block; line-height: 1.2;"> -->
 												Supernova 100 - Poster Storage
 												</a>
 											</li>
