--- a/index.html
+++ b/index.html
@@ -65,7 +65,12 @@
 										</ul> -->
 
 										<h3><u>Useful Links:</u></h3>
-
+										<ul class="actions">
+											<li><a href="https://sites.google.com/view/supernova100" class="button orange">Conference Website</a></li>
+											<li><a href="schedule/100YSC_ConferenceSchedule.pdf" class="button red" target="_blank" rel="noopener noreferrer">Conference Schedule</a></li>
+											<li><a href="https://drive.google.com/drive/folders/..." class="button gray">Supernova 100 - Poster Storage</a></li>
+										  </ul>
+<!-- 										  
 											<ul class="actions" style="
 											display: flex; 
 											flex-direction: column; 
@@ -77,7 +82,7 @@
 											<li style="margin: 0; padding: 0;">
 												<a href="https://sites.google.com/view/supernova100" 
 												class="button orange">
-												<!-- style="background-color: #d0cdd2; font-weight: bold; padding: 0.6em 1em 0.4em 1em; display: inline-block; line-height: 1.2;"> -->
+												style="background-color: #d0cdd2; font-weight: bold; padding: 0.6em 1em 0.4em 1em; display: inline-block; line-height: 1.2;">
 												Conference Website
 												</a>
 											</li>
@@ -85,18 +90,18 @@
 												<a href="schedule/100YSC_ConferenceSchedule.pdf" 
 												target="_blank" rel="noopener noreferrer"
 												class="button red">
-												<!-- style="background-color: #c3cdd2; font-weight: bold; padding: 0.6em 1em 0.4em 1em;"> -->
-												Conference Schedule
+												style="background-color: #c3cdd2; font-weight: bold; padding: 0.6em 1em 0.4em 1em;">
+												Conference Schedule (in PDF)
 												</a>
 											</li>
 											<li style="margin: 0; padding: 0;">
 												<a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC?usp=sharing" 
 												class="button gray">
-												<!-- style="background-color: #e4d9d9; font-weight: bold; padding: 0.6em 1em 0.4em 1em; display: inline-block; line-height: 1.2;"> -->
+												style="background-color: #e4d9d9; font-weight: bold; padding: 0.6em 1em 0.4em 1em; display: inline-block; line-height: 1.2;">
 												Supernova 100 - Poster Storage
 												</a>
 											</li>
-											</ul>
+											</ul> -->
 
 
 										<!-- <ul class="actions" style="display: flex; flex-direction: column; gap: 0.25em; margin: 0; padding: 0;">
@@ -164,9 +169,9 @@
 					<footer id="footer">
 						<section>
 							<h2>Conference Programme</h2>
-							<p> Check out the PDF layout of the Talks and ePosters at the following link.</p>
+							<p> Check out the Schedule of the Talks and ePosters at the following link.</p>
 							<ul class="actions">
-								<li><a href="https://sites.google.com/view/supernova100/social-programme?authuser=0" class="button">Conference Schedule</a></li>
+								<li><a href="schedule/100YSC_ConferenceSchedule.pdf" class="button">Conference Schedule</a></li>
 							</ul>
 						</section>
 						<section>
