Update minor changes to the HTML/CSS code

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 					<footer id="footer">
 						<section>
 							<h2>Conference Programme</h2>
-							<p> Check out the Schedule of the Talks and ePosters at the following link.</p>
+							<p> Check out the Schedule of the Talks/ePosters at the following link.</p>
 							<ul class="actions">
 								<li><a href="schedule/100YSC_ConferenceSchedule.pdf" class="button">Conference Schedule</a></li>
 							</ul>
