Remove the redundant coference programme in the footer

--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
+						<!-- <section>
 							<h2>Conference Programme</h2>
 							<p> Check out the Schedule of the Talks/ePosters at the following link.</p>
 							<ul class="actions">
 								<li><a href="schedule/100YSC_ConferenceSchedule.pdf" class="button">Conference Schedule</a></li>
 							</ul>
-						</section>
+						</section> -->
 						<section>
 							<h2>Contact Us </h2>
 							<dl class="alt">
