Update styling changes in the code and removal of deadlines in the code.

--- a/archive.html
+++ b/archive.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Stellar by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 <head>
   <title>SN100 e-Poster Archive</title>
@@ -37,7 +32,7 @@
 
     <!-- Footer -->
     <footer id="footer">
-      <p class="copyright">&copy; Design Credits : <a href="https://html5up.net">HTML5 UP</a>.</p>
+      <p class="copyright">&copy; Design Credits : <a href="Avinash Singh, https://html5up.net">HTML5 UP</a>.</p>
     </footer>
 
   </div>
@@ -50,28 +45,6 @@
   <script src="assets/js/breakpoints.min.js"></script>
   <script src="assets/js/util.js"></script>
   <script src="assets/js/main.js"></script>
-
-  <!-- Load posters.json and render list -->
-  <!-- <script>
-    fetch('posters.json')
-      .then(response => response.json())
-      .then(data => {
-        const list = document.getElementById('posterList');
-        data.forEach((poster, i) => {
-          const li = document.createElement('li');
-          li.innerHTML = `
-            <strong>${i + 1}. ${poster.author} – <em>${poster.title}</em></strong><br />
-            <a href="${poster.pdf}" target="_blank" class="button small">View</a>
-            <a href="${poster.pdf}" download class="button small">Download</a>
-          `;
-          list.appendChild(li);
-        });
-      })
-      .catch(error => {
-        console.error("Failed to load posters:", error);
-        document.getElementById('posterList').innerHTML = '<li>Error loading posters.</li>';
-      });
-  </script> -->
 
   <script>
     fetch('posters.json')
