--- a/index.html
+++ b/index.html
@@ -50,61 +50,12 @@
 
 										<p>We kindly ask you to upload both your flash-talk slide and e-Poster as PDF files by <strong>August 11</strong>, at the following link : <span style="background-color: #e4d9d9; font-weight: bold;"><a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC?usp=sharing">Supernova 100 - Poster Storage</a></span>. For the filenames, please use the format <strong>'ePoster_Title_Surname.pdf'</strong> and <strong>'FlashTalk_Title_Surname.pdf'</strong>. Posters will be hosted online and will <strong>go live on August 16 22:00 UTC</strong>. If you have any questions, feel free to contact us at supernova100y@gmail.com.</p>
 
-										<!-- Submitted posters will be made available online for other participants to view through the webpage <u><span style="background-color: #e3cfcc; font-weight: bold;">[<a href="https://singhavinash.net/SN100Posters/">Supernova 100 : e-Posters/Flash-talk Gallery</a>]</span></u> -->
-
-										<!-- <ul class="actions">
-											<li><a href="https://sites.google.com/view/supernova100" class="button">Conference Website</a></li>
-										</ul> -->
-
-										<!-- <ul class="actions">
-											<li>
-											  <a href="https://sites.google.com/view/supernova100" 
-												 class="button" 
-												 style="background-color: #d0cdd2; font-weight: bold;">
-												 Conference Website
-											  </a>
-											</li>
-										</ul> -->
-
 										<h3><u>Useful Links:</u></h3>
 										<ul class="actions">
 											<li><a href="https://sites.google.com/view/supernova100" class="button orange">Conference Website</a></li>
 											<li><a href="schedule/100YSC_ConferenceSchedule.pdf" class="button red" target="_blank" rel="noopener noreferrer">Conference Schedule</a></li>
 											<li><a href="https://drive.google.com/drive/folders/..." class="button gray">Supernova 100 - Poster Storage</a></li>
 										  </ul>
-<!-- 										  
-											<ul class="actions" style="
-											display: flex; 
-											flex-direction: column; 
-											gap: 0.25em; 
-											margin: 0; 
-											padding: 0; 
-											list-style: none;
-											">
-											<li style="margin: 0; padding: 0;">
-												<a href="https://sites.google.com/view/supernova100" 
-												class="button orange">
-												style="background-color: #d0cdd2; font-weight: bold; padding: 0.6em 1em 0.4em 1em; display: inline-block; line-height: 1.2;">
-												Conference Website
-												</a>
-											</li>
-											<li style="margin: 0; padding: 0;">
-												<a href="schedule/100YSC_ConferenceSchedule.pdf" 
-												target="_blank" rel="noopener noreferrer"
-												class="button red">
-												style="background-color: #c3cdd2; font-weight: bold; padding: 0.6em 1em 0.4em 1em;">
-												Conference Schedule (in PDF)
-												</a>
-											</li>
-											<li style="margin: 0; padding: 0;">
-												<a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC?usp=sharing" 
-												class="button gray">
-												style="background-color: #e4d9d9; font-weight: bold; padding: 0.6em 1em 0.4em 1em; display: inline-block; line-height: 1.2;">
-												Supernova 100 - Poster Storage
-												</a>
-											</li>
-											</ul> -->
-
 
 										<!-- <ul class="actions" style="display: flex; flex-direction: column; gap: 0.25em; margin: 0; padding: 0;">
 										  <li style="margin: 0;">
@@ -192,7 +143,7 @@
 								<li><a href="https://sites.google.com/view/supernova100" class="icon brands fa-dribbble alt"><span class="label">Website</span></a></li>
 							</ul>
 						</section>
-      				  	<p class="copyright">&copy; Design Credits : <a href="https://html5up.net">HTML5 UP</a>.</p>
+      				  	<p class="copyright">&copy; Design Credits : <a href="Avinash Singh, https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
