Update the upload link for ePoster upload

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 										<ul class="actions">
 											<li><a href="https://sites.google.com/view/supernova100" class="button orange">Conference Website</a></li>
 											<li><a href="schedule/100YSC_ConferenceSchedule.pdf" class="button red" target="_blank" rel="noopener noreferrer">Conference Schedule</a></li>
-											<li><a href="https://drive.google.com/drive/folders/..." class="button gray">Supernova 100 - Poster Storage</a></li>
+											<li><a href="https://drive.google.com/drive/folders/12H96Eyd_w1s8vtMC1JLmng203zSGl1oC" class="button gray">Supernova 100 - Poster Storage</a></li>
 										  </ul>
 
 										<!-- <ul class="actions" style="display: flex; flex-direction: column; gap: 0.25em; margin: 0; padding: 0;">
